https-https/ossm/istio-system/gw-nginx-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-default-egress-nginx-mtls
  namespace: istio-system
spec:
  selector:
    istio: default-egress
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - nginx.${OCP_APPS_DOMAIN}
    tls:
      mode: PASSTHROUGH
