https-https/ossm/istio-system/se-nginx-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: nginx-mtls
  namespace: istio-system
spec:
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
