https-https/ossm/istio-system/vs-egress-nginx-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-nginx-mtls
  namespace: istio-system
spec:
  exportTo:
  - .
  gateways:
  - istio-default-egress-nginx-mtls
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  tls:
  - match:
    - gateways:
      - istio-default-egress-nginx-mtls
      port: 443
      sniHosts:
      - nginx.${OCP_APPS_DOMAIN}
    route:
    - destination:
        host: nginx.${OCP_APPS_DOMAIN}
        port:
          number: 443
